--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="mx-auto my-24 w-5/6 bg-todo-bg py-6 flex flex-col ">
         <section id="add-task" class="">
             <div class="flex flex-col items-center content-evenly">
-                <div class="text-text-color font-bold text-center text-2xl my-2">
+                <div class="text-text-color font-bold text-center text-4xl my-2">
                     My ToDo's
                 </div>
                 <div class="w-3/4 my-2 relative flex items-center "><input type="text" placeholder="Add New..."
@@ -20,15 +20,16 @@
                 </div>
             </div>
         </section>
-        <hr class="h-0.5 bg-gray-400 w-5/6 my-5 mx-auto">
+        <hr class="h-0.5 bg-gray-400 w-5/6 my-5 mx-auto ">
+        <h1 class="w-5/6 my-5 mx-auto text-3xl font-bold text-center mt-8 underline text-text-color">Pending Tasks</h1>
         <section id="made-tasks" class="w-5/6 mx-auto">
             <div>
                 <table class="w-full text-center">
                     <thead>
                         <tr>
-                            <th class="bg-gray-300 border-r-black ">SrNo.</th>
-                            <th class="bg-gray-300 border-r-black ">Task</th>
-                            <th class="bg-gray-300">Action</th>
+                            <th class="bg-text-color text-white py-1 border-r-black ">SrNo.</th>
+                            <th class="bg-text-color text-white py-1 border-r-black ">Task</th>
+                            <th class="bg-text-color text-white py-1">Action</th>
                         </tr>
                     </thead>
                     <tbody id="tbody">
@@ -36,6 +37,21 @@
                     </tbody>
                 </table>
             </div>
+        </section>
+        <hr class="h-0.5 bg-gray-400 w-5/6 my-5 mx-auto mt-20">
+        <h1 class="w-5/6 my-5 mx-auto text-3xl font-bold text-center mt-8 underline text-text-color">Completed Tasks</h1>
+        <section class="w-5/6 mx-auto"><table class="w-full text-center">
+            <thead>
+                <tr>
+                    <th class="bg-green-600 py-1 text-white border-r-black ">SrNo.</th>
+                    <th class="bg-green-600 py-1 text-white border-r-black ">Task</th>
+                    <th class="bg-green-600 py-1 text-white">Action</th>
+                </tr>
+            </thead>
+            <tbody id="doneBody" class="bg-neutral-300">
+               
+            </tbody>
+        </table>
         </section>
     </main>
     <script src="/scripts/todoscriptmodule.js"></script>
